--- a/API/PromotionApi/appsettings.json
+++ b/API/PromotionApi/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-PromotionApi-22DBD0EC-5804-41BD-B215-90424D69CD53;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ConnectionString": "Host=178.128.186.9;Port=5432;Pooling=true;Database=promotion;User Id=promotion_admin;Password=promotion;"
+    "DefaultConnection": "Host=178.128.186.9;Port=5432;Pooling=true;Database=promotion;Username=promotion_admin;Password=promotion;"
   },
   "Logging": {
     "LogLevel": {
