--- a/API/PromotionApi/appsettings.json
+++ b/API/PromotionApi/appsettings.json
@@ -7,5 +7,42 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "IpWhitelist": [],
+    "EndpointWhitelist": [],
+    "ClientWhitelist": [],
+    "GeneralRules": [
+      {
+        "Endpoint": "*:/api/auth/register",
+        "Period": "60s",
+        "Limit": 1
+      },
+      {
+        "Endpoint": "*:/api/auth/login",
+        "Period": "30s",
+        "Limit": 6
+      },
+      {
+        "Endpoint": "*:/api/auth/extend",
+        "Period": "60s",
+        "Limit": 1
+      },
+      {
+        "Endpoint": "*:/api/auth/logout",
+        "Period": "60s",
+        "Limit": 1
+      },
+      {
+        "Endpoint": "*",
+        "Period": "1s",
+        "Limit": 5
+      }
+    ]
+  }
 }
