API: Refatorando, mudando BDD, add mudar senha, add pedidos

--- a/API/PromotionApi/appsettings.json
+++ b/API/PromotionApi/appsettings.json
@@ -14,6 +14,7 @@
     "RealIpHeader": "X-Real-IP",
     "ClientIdHeader": "X-ClientId",
     "HttpStatusCode": 429,
+    "QuotaExceededMessage": "{\"error\":\"rate limit exceeded\"}",
     "IpWhitelist": [],
     "EndpointWhitelist": [],
     "ClientWhitelist": [],
@@ -21,7 +22,7 @@
       {
         "Endpoint": "*:/api/auth/register",
         "Period": "60s",
-        "Limit": 1
+        "Limit": 10
       },
       {
         "Endpoint": "*:/api/auth/login",
@@ -37,6 +38,16 @@
         "Endpoint": "*:/api/auth/logout",
         "Period": "60s",
         "Limit": 1
+      },
+      {
+        "Endpoint": "*:/api/auth/reset",
+        "Period": "60s",
+        "Limit": 2
+      },
+      {
+        "Endpoint": "*:/api/auth/change",
+        "Period": "60s",
+        "Limit": 4
       },
       {
         "Endpoint": "*",
