API: Correção do IP da DB e erro na descrição do código

--- a/API/PromotionApi/appsettings.json
+++ b/API/PromotionApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=178.128.186.9;Port=5432;Pooling=true;Database=promotion;Username=promotion_admin;Password=promotion;"
+    "DefaultConnection": "Host=localhost;Port=5432;Pooling=true;Database=promotion;Username=promotion_admin;Password=promotion;"
   },
   "Logging": {
     "LogLevel": {
