--- a/app/ionic.config.json
+++ b/app/ionic.config.json
@@ -3,5 +3,11 @@
   "integrations": {
     "cordova": {}
   },
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "proxies": [
+    {
+      "path": "/api",
+      "proxyUrl": "http://178.128.186.9/api"
+    }
+  ]
 }
