--- a/app/package.json
+++ b/app/package.json
@@ -21,18 +21,24 @@
     "@angular/platform-browser-dynamic": "4.4.4",
     "@ionic-native/core": "3.12.1",
     "@ionic-native/device": "^4.2.1",
+    "@ionic-native/http": "^4.15.0",
     "@ionic-native/keyboard": "^4.1.0",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.0.1",
     "brmasker-ionic-3": "^1.3.1",
     "cordova-android": "^6.3.0",
+    "cordova-browser": "5.0.4",
     "cordova-ios": "^4.4.0",
+    "cordova-plugin-advanced-http": "^2.0.1",
     "cordova-plugin-console": "^1.1.0",
-    "cordova-plugin-device": "^1.1.6",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.3",
-    "cordova-plugin-whitelist": "^1.3.2",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-http": "^1.2.0",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "git+https://github.com/apache/cordova-plugin-whitelist.git",
+    "cordova-sqlite-storage": "^2.1.5",
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -57,11 +63,14 @@
       "cordova-plugin-whitelist": {},
       "ionic-plugin-keyboard": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-http": {},
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
       "android",
-      "ios"
+      "ios",
+      "browser"
     ]
   },
   "config": {
