APP: Arrumando procura

--- a/app/ionic.config.json
+++ b/app/ionic.config.json
@@ -6,8 +6,8 @@
   "type": "ionic-angular",
   "proxies": [
     {
-      "path": "/api",
-      "proxyUrl": "http://178.128.186.9/api"
+      "path": "/api/",
+      "proxyUrl": "http://178.128.186.9"
     }
   ]
 }
