--- a/app/package.json
+++ b/app/package.json
@@ -27,7 +27,7 @@
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "^2.0.1",
     "brmasker-ionic-3": "^1.3.1",
-    "cordova-android": "^6.3.0",
+    "cordova-android": "6.3.0",
     "cordova-browser": "5.0.4",
     "cordova-ios": "^4.4.0",
     "cordova-plugin-advanced-http": "^2.0.1",
@@ -38,7 +38,7 @@
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "git+https://github.com/apache/cordova-plugin-whitelist.git",
-    "cordova-sqlite-storage": "^2.1.5",
+    "cordova-sqlite-storage": "^2.4.0",
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -47,7 +47,7 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.0.1",
+    "@ionic/app-scripts": "^3.2.0",
     "@ionic/lab": "1.0.8",
     "ionic": "3.19.0",
     "typescript": "2.3.4"
