--- a/app/package.json
+++ b/app/package.json
@@ -28,7 +28,7 @@
     "@ionic/storage": "^2.0.1",
     "brmasker-ionic-3": "^1.3.1",
     "cordova-android": "6.3.0",
-    "cordova-browser": "5.0.4",
+    "cordova-browser": "^5.0.4",
     "cordova-ios": "^4.4.0",
     "cordova-plugin-advanced-http": "^2.0.1",
     "cordova-plugin-console": "^1.1.0",
