--- a/app/package.json
+++ b/app/package.json
@@ -19,8 +19,10 @@
     "@angular/http": "4.4.4",
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
+    "@ionic-native/camera": "^4.18.0",
     "@ionic-native/core": "3.12.1",
     "@ionic-native/device": "^4.2.1",
+    "@ionic-native/file-transfer": "^4.18.0",
     "@ionic-native/http": "^4.15.0",
     "@ionic-native/keyboard": "^4.1.0",
     "@ionic-native/splash-screen": "3.12.1",
@@ -31,6 +33,7 @@
     "cordova-browser": "^5.0.4",
     "cordova-ios": "^4.4.0",
     "cordova-plugin-advanced-http": "^2.0.1",
+    "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-file": "^6.0.1",
@@ -65,7 +68,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-sqlite-storage": {},
       "cordova-plugin-http": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "ios",
