--- a/app/package.json
+++ b/app/package.json
@@ -47,7 +47,7 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.2.0",
+    "@ionic/app-scripts": "3.2.1",
     "@ionic/lab": "1.0.8",
     "ionic": "3.19.0",
     "typescript": "2.3.4"
